# platform.core.system.libtlm-nfc

./: Makefile.am  Makefile.in  configure  configure.ac  libtlm-nfc-uninstalled.pc.in  libtlm-nfc.pc.in  project.config
docs/: Makefile.am  Makefile.in  libtlm-nfc-docs.sgml  libtlm-nfc-sections.txt  libtlm-nfc.types
docs/html/: GTlmNfc.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  libtlm-nfc.devhelp2  object-tree.html
packaging/: libtlm-nfc.changes  libtlm-nfc.spec
src/: Makefile.am  Makefile.in  gtlm-nfc.c  gtlm-nfc.h
test/: Makefile.am  Makefile.in  tlmnfctest.c
